@@ -25,11 +25,11 @@
 #define PLUGIN_023                                                              // RGB-Led aansturing
 #define PLUGIN_023_CORE
 
-
-#define PLUGIN_036                                                              // PID Regelaar
+#define PLUGIN_033                                                              // NRF24L01 Plugin
+#define PLUGIN_033_CORE
 
 
 #define CFG_CLOCK              true                                             // false=geen code voor Real Time Clock mee compileren. (Op Mega is meecompileren van Clock verplicht)
-#define CFG_SOUND             false                                             // false=geen luidspreker in gebruik.
-#define CFG_WIRED             false                                             // false=wired voorzieningen uitgeschakeld
+#define CFG_SOUND              true                                             // false=geen luidspreker in gebruik.
+#define CFG_WIRED              true                                             // false=wired voorzieningen uitgeschakeld
 #define I2C                    true                                             // I2C communicatie mee compileren (I2C plugins en klok blijvel wel gebruik maken van I2)
